[workspace]
members = ["server", "overlay", "interop"]

[package]
name = "raffle-royale"
version = "0.1.0"
edition = "2021"

[dependencies]
geng = { git = "https://github.com/kuviman/geng" }
twitch-irc = { version = "4", features = ["with-serde"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
serde = "1"
websocket-lite = "0.5"
reqwest = { version = "0.11", features = ["json"] }
url = "2"
open = "3"
eyre = "0.6"
hyper = { version = "0.14", features = ["server"] }
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "all-databases"] }
toml = "0.5"
