[package]
name = "ttv"
version = "0.1.0"
edition = "2021"

[features]
default = []
serve = []

[dependencies]
raffle-royale = { path = "raffle-royale" }
geng = { git = "https://github.com/kuviman/geng" }
serde = "1"
url = "2"
eyre = "0.6"
toml = "0.5"
noise = "0.8.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
websocket-lite = "0.5"
reqwest = { version = "0.11", features = ["json"] }
hyper = { version = "0.14", features = ["server", "http1", "tcp"] }
hyper-staticfile = "0.9"
open = "3"
twitch-irc = { version = "4", features = ["with-serde"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
