[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
interop = { path = "../interop" }
geng = { git = "https://github.com/kuviman/geng" }
twitch-irc = { version = "4", features = ["with-serde"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
serde = "1"
websocket-lite = "0.5"
reqwest = { version = "0.11", features = ["json"] }
url = "2"
eyre = "0.6"
hyper = { version = "0.14", features = ["server", "http1", "tcp"] }
hyper-staticfile = "0.9"
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "all-databases"] }
toml = "0.5"
open = "3"